fixed todolist-flask deployment

--- a/todolist-flask/static/index.html
+++ b/todolist-flask/static/index.html
@@ -74,7 +74,7 @@
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script>
-			const API_URL = "http://localhost:3000/api";
+			const API_URL = "/api";
 
         function fetchTasks() {
             $.getJSON(API_URL + '/todos', function(data) {
